# tp_python

./: .gitignore  README.md  pyproject.toml
src/tp1/: __init__.py  main.py  readme.md  requirement.txt
src/tp2/: __init__.py  main.py  readme.md  requirement.txt  shellcode_easy.txt  shellcode_hard.txt
src/tp3/: __init__.py  main.py
src/tp4/: __init__.py  main.py
